# esp32-mcp-mqtt-tutorial

./: README-CN.md  README.md
samples/blog_1/: CMakeLists.txt  sdkconfig
samples/blog_1/main/: CMakeLists.txt  main.c
samples/blog_2/components/mcp-over-mqtt/: idf_component.yml  jsonrpc.c  mcp_server.c
samples/blog_2/main/: CMakeLists.txt  idf_component.yml  main.c
samples/blog_3/: CMakeLists.txt  agent.py
samples/blog_3/components/mcp-over-mqtt/: jsonrpc.c  mcp_server.c
samples/blog_3/components/mcp-over-mqtt/include/: mcp.h
samples/blog_3/main/: ._CMakeLists.txt  CMakeLists.txt  main.c  radio.c  wifi.c
samples/blog_4/: .env.example  README-ZH.md  README.md  requirements.txt  webhook.py
samples/blog_4/esp32/: esp32_voice_assistant.ino
samples/blog_5/: .gitignore  README.md  app.py  chatbot.py  config.py  personality.py  pyproject.toml  roles.py
samples/blog_5/static/css/: style.css
samples/blog_5/static/js/: main.js
samples/blog_5/templates/: base.html  chat.html  config.html  error.html  index.html
samples/blog_6/: CMakeLists.txt  main.py  pyproject.toml
samples/blog_6/components/mcp-over-mqtt/: CMakeLists.txt
samples/blog_6/components/mcp-over-mqtt/include/: mcp_server.h
samples/blog_6/main/: CMakeLists.txt  idf_component.yml  main.c  radio.h  send_image.c  send_image.h  wifi.h
